[gd_scene load_steps=14 format=3 uid="uid://b5scy887qcf2e"]

[ext_resource type="Script" uid="uid://byn7i6i1rptqb" path="res://complete_scenes/world/interactive_objects/lazer_turret/base_turret.gd" id="1_4goqj"]
[ext_resource type="SpriteFrames" uid="uid://bhf4044fxa4yu" path="res://complete_scenes/world/interactive_objects/lazer_turret/base_turret_sprite_frames.tres" id="2_jwwrn"]
[ext_resource type="Texture2D" uid="uid://h5mcsjplum1y" path="res://assets/textures/effects/T_3x3_rage.png" id="3_ahijb"]
[ext_resource type="PackedScene" uid="uid://mwnfq42hbvqp" path="res://complete_scenes/entities/bullet_generator/bullet_generator.tscn" id="3_xqic7"]
[ext_resource type="AudioStream" uid="uid://dqnphffc74y78" path="res://complete_scenes/entities/shotgun/shotgurn_res/gunshot-desert-eagle-pistol-fascinatedsound-3-3-00-01.mp3" id="4_i1b81"]
[ext_resource type="Script" uid="uid://dob6ny5ruq3xt" path="res://complete_scenes/entities/bullet_generator/modular_upgrades/m_strategies/m_base_bullet_strategy.gd" id="4_qjcjr"]
[ext_resource type="Resource" uid="uid://d30ljv4n0c4np" path="res://complete_scenes/entities/bullet_generator/modular_upgrades/mr_resource_strategies/mr_speed.tres" id="5_hwho7"]
[ext_resource type="Resource" uid="uid://b0ywasmguay6y" path="res://complete_scenes/entities/bullet_generator/modular_upgrades/mr_resource_strategies/mr_damage.tres" id="8_ogcjm"]

[sub_resource type="Animation" id="Animation_u4uep"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GunSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_mb4ic"]
resource_name = "shot"
length = 0.02
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GunSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01, 0.02),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5a5fc"]
_data = {
&"RESET": SubResource("Animation_u4uep"),
&"shot": SubResource("Animation_mb4ic")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_vn0kc"]
radius = 456.0

[sub_resource type="SpriteFrames" id="SpriteFrames_tcm3k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ahijb")
}],
"loop": false,
"name": &"shot",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ahijb")
}],
"loop": true,
"name": &"turret_idle",
"speed": 5.0
}]

[node name="BaseTurret" type="Node2D" groups=["Turret", "Turrets"]]
editor_description = "Обычная, турель, которую можно поместить на врага или игрока

Не является RigitBody, поскольку это скорее оружие или компонент сущности, чем сущность.

"
z_index = 10
z_as_relative = false
script = ExtResource("1_4goqj")
white_list = Array[String](["Player"])
black_list = Array[String](["Enemy"])

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(456, 0)
collision_mask = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5a5fc")
}

[node name="AggroZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 49

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroZone"]
shape = SubResource("CircleShape2D_vn0kc")
debug_color = Color(1, 0, 0, 0)

[node name="BaseSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_jwwrn")
animation = &"attack_w"

[node name="BaseSprite2" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_jwwrn")
animation = &"attack_w"

[node name="GunSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(12.000001, 4.6666656)
sprite_frames = SubResource("SpriteFrames_tcm3k")
animation = &"turret_idle"
offset = Vector2(1, 0)

[node name="BulletGenerator" parent="GunSprite" instance=ExtResource("3_xqic7")]
unique_name_in_owner = true
position = Vector2(9, 0)
upgrades = Array[ExtResource("4_qjcjr")]([ExtResource("5_hwho7"), ExtResource("5_hwho7"), ExtResource("5_hwho7"), ExtResource("8_ogcjm")])

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_i1b81")
volume_db = 5.181
pitch_scale = 0.64
attenuation = 2.5491211

[connection signal="body_entered" from="AggroZone" to="." method="_on_aggro_zone_body_entered"]
[connection signal="body_exited" from="AggroZone" to="." method="_on_aggro_zone_body_exited"]
